Simplify distribution and startup